[gd_scene load_steps=5 format=3 uid="uid://b3p0vpnbsshbv"]

[ext_resource type="Script" path="res://logic/player_hud/player_hud.gd" id="1_4c22l"]
[ext_resource type="Texture2D" uid="uid://k4jsmrdd7f2r" path="res://icon.svg" id="2_do7jn"]
[ext_resource type="Theme" uid="uid://ce5u76q6yy1sg" path="res://logic/player_hud/player_hud_theme.tres" id="3_36vua"]
[ext_resource type="Texture2D" uid="uid://y2snopdlq3ny" path="res://assets/Weapons/Wood/Wood.png" id="3_ix3p3"]

[node name="PlayerHud" type="CanvasLayer"]
script = ExtResource("1_4c22l")

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
offset_right = 588.0
offset_bottom = 350.0
color = Color(0.391549, 0.278904, 0.304765, 1)

[node name="CurrentPlayerSprite" type="Sprite2D" parent="ColorRect"]
position = Vector2(87, 136)
texture = ExtResource("2_do7jn")

[node name="PlayerHealthLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.076
anchor_bottom = 0.079
offset_left = 32.0
offset_top = 261.0
offset_right = 260.96
offset_bottom = 317.84
theme = ExtResource("3_36vua")
text = "Health: 1/2"

[node name="CurrentItemSprite" type="Sprite2D" parent="ColorRect"]
position = Vector2(253, 137)
scale = Vector2(2, 2)
texture = ExtResource("3_ix3p3")
region_enabled = true
region_rect = Rect2(-0.368973, -1.77889, 16.7069, 51.1487)

[node name="CurrentPlayerLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 205.0
offset_right = 174.0
offset_bottom = 274.0
theme = ExtResource("3_36vua")
theme_type_variation = &"PlayerHud"
text = "Player"
